Fix uneven padding in purchase history

--- a/frontend/src/assets/stylesheets/app.scss
+++ b/frontend/src/assets/stylesheets/app.scss
@@ -38,3 +38,7 @@ button:hover {
 .width-100 {
   width: 100%;
 }
+
+.border-box {
+  box-sizing: border-box;
+}
